# data-selection

./: .gitignore  README.md  analyze_logprobs.py  arguments.py  compute_logprobs.py  get_training_dataset.py  get_validation_dataset.py  pyproject.toml  requirements.txt  run_clm.py
scripts/: analyze_logprobs.sh  compute_logprobs.sh  download_training_data.sh
